Change Dashboard to Portfolio

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -207,7 +207,7 @@
         "permissions": "Permissions",
         "please_create_account": "Please create an account",
         "polo_scam": "This account is not the real Poloniex account, please send to this account: poloniexwallet.",
-        "portfolio": "Portfolio",
+        "portfolio": "Balances",
         "propose_from": "Propose From",
         "proposed_transactions": {
             "advanced_feature": "This is an advanced feature. Please answer the following questions",
@@ -1317,7 +1317,7 @@
         "create_account": "Create Account",
         "create_asset": "Create Asset",
         "current": "Current Account",
-        "dashboard": "Dashboard",
+        "dashboard": "Portfolio",
         "deposit-withdraw": "Deposit/Withdraw",
         "deposit_legacy": "or Legacy Deposit",
         "exchange": "Exchange",
@@ -1381,7 +1381,7 @@
             "operation_failed": "Operation failed",
             "remove": "Remove"
         },
-        "dashboard": "Dashboard",
+        "dashboard": "Portfolio",
         "debug-report": "Report your error log console, or create a screenshot",
         "deposit": {
             "deposit": "Deposit",
@@ -2115,7 +2115,7 @@
         "scrollbars_hide": "Reduce scroll bars",
         "show": "Show",
         "showAssetPercent": "Show asset percentages on the account page",
-        "showProposedTx": "Show proposed transactions in dashboard",
+        "showProposedTx": "Show proposed transactions in Portfolio",
         "showSettles": "Show settle orders in depth chart",
         "skipped": "Skipped",
         "switch": "Switch Node",
@@ -2168,7 +2168,7 @@
             "peer_right": "Peer 2",
             "proposal_fee": "Proposal fee",
             "proposal_fee_tooltip": "The indicated transaction fee will be paid to create the proposal to realize this barter",
-            "propose_tooltip": "This creates a proposal that needs to be approved by you and all other involved parties. After broadcasting the proposal, go to find the Proposal tab in your Dashboard, approve the proposal and notify the other involved parties.",
+            "propose_tooltip": "This creates a proposal that needs to be approved by you and all other involved parties. After broadcasting the proposal, go to find the Proposal tab in your Portfolio, approve the proposal and notify the other involved parties.",
             "remove_escrow": "Remove escrow",
             "send_to_escrow": "Use escrow as custodian for Peer 1's funds",
             "send_to_escrow_tooltip": "Enabling this will send the selected funds to the escrow, and then a barter proposal is created between escrow and Peer 2",
@@ -2177,7 +2177,7 @@
             "total_fees_tooltip": "The account that is indicated as Peer 1 will have to pay the indicated transaction fee in total for the whole barter"
         },
         "borrow": {
-            "borrow_tooltip": "You can also find this feature in your Dashboard under the tab Margin Positions, or by clicking  Borrow in the Exchange",
+            "borrow_tooltip": "You can also find this feature in your Portfolio under the tab Margin Positions, or by clicking  Borrow in the Exchange",
             "choose": "Choose the SmartCoin you want to create a position for",
             "description": "Borrow a BitAsset from the BitShares Blockchain by locking up collateral (e.g. bitUSD, bitCNY, etc.)",
             "do_it": "Let's do it",
@@ -2835,7 +2835,7 @@
         "no_wallet": "You do not have a local wallet yet?",
         "noneed_backup": "No backup is needed",
         "not_first_account": "Since you already have an account, you will need to pay for this new account yourself. In order to do so, your account needs to have lifetime membership, which can be bought in the account page.",
-        "ok_done": "OK, take me to the dashboard",
+        "ok_done": "OK, take me to the Portfolio",
         "pass_incorrect": "Incorrect password",
         "pass_length": "The password must contain at least %(minLength)s characters. Ideally you should use 20 or more, and a combination of numbers, special characters and letters.",
         "password": "Wallet password",
@@ -2870,7 +2870,7 @@
         "switch_model_password": "Switch to cloud wallet",
         "switch_model_wallet": "Switch to local wallet",
         "tips_account": "See your new account",
-        "tips_dashboard": "See your dashboard",
+        "tips_dashboard": "See your Portfolio",
         "tips_deposit": "Make a deposit",
         "tips_explore": "Now that you've successfully created an account and downloaded the backup, it's time to get started. Click on one of the links below to start exploring.",
         "tips_explore_pass": "Now that you've successfully created an account and backed up your password, it's time to get started. Click on one of the links below to start exploring.",
