- add RUDEX.PZM, icon and markets … - add custom field for public key PZM (for withdrawals) - change endpoint RuDEX gateApi

--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -1675,6 +1675,7 @@
             "no_assets": "Нет доступных активов для вывода",
             "no_estimate": "Для этого объекта нет доступных оценок",
             "no_gateways": "Извините, для обработки этой операции вывода нет доступных шлюзов",
+            "public_key": "Public key",
             "quantity": "Количество",
             "submit": "Вывести",
             "withdraw": "Вывод"
