--- a/app/assets/locales/locale-zh.json
+++ b/app/assets/locales/locale-zh.json
@@ -2866,8 +2866,8 @@
         "pass_incorrect": "密码错误",
         "pass_length": "密码必须包含至少 %(minLength)s 位字符。理想的密码应为 20 位或更长，并且为数字、字母和特殊符号的组合。",
         "password": "钱包密码",
-        "password_crucial": "现在就请你将密码记下来，无论是写在纸上、使用密码管理软件或是别的什么可以在你忘记密码时能够取回的方法。这一点至关重要。一旦你忘记密码，你就无法再访问账户，<strong>我们没有办法帮助你恢复</strong>。",
-        "password_lose_warning": "<strong>重要：如果你忘记了密码，你将无法登录自己的账户，即不能重置也无法取回密码！确保你已经记住自己的密码或是将其写下安放在合适的地方！</strong>",
+        "password_crucial": "现在就请你将账户名和密码记下来，无论是写在纸上、使用密码管理软件或是别的什么可以在你忘记密码时能够取回的方法。这一点至关重要。一旦你忘记账户名或者密码，你就无法再访问账户，<strong>我们没有办法帮助你恢复</strong>。",
+        "password_lose_warning": "<strong>重要：如果你忘记了账户名或者密码，你将无法登录自己的账户，即不能重置也无法取回密码！确保你已经记住自己的账户名和密码或是将其写下安放在合适的地方！</strong>",
         "password_model": "帐号模式",
         "password_model_1": "帐号模式使用密码和账户名来衍生出私钥。",
         "password_model_2": "你只需要账户名和密码就可以从任意计算机和浏览器上登录自己的账户。但<strong>你的密码将有可能被暴力破解！因此使用长密码非常重要，密码长度最好在 20 位以上！</strong>",
