Copy text from locale-en.json to locale-ko.json

--- a/app/assets/locales/locale-ko.json
+++ b/app/assets/locales/locale-ko.json
@@ -2860,11 +2860,11 @@
         "pass_incorrect": "Incorrect password",
         "pass_length": "The password must contain at least %(minLength)s characters. Ideally you should use 20 or more, and a combination of numbers, special characters and letters.",
         "password": "비밀번호",
-        "password_crucial": "It is crucial that you take the time to write down your password now, whether it be on paper, a password manager, or somewhere else. If you lose or forget this password your account will be lost, <strong>we cannot help you get it back</strong>.",
-        "password_lose_warning": "<strong>IMPORTANT: If you forget your pass phrase you will be unable to access your account, we cannot reset or restore your password! Make sure you memorize or write down your password!</strong>",
-        "password_model": "Account model",
-        "password_model_1": "The account model uses a password in combination with your account name to generate your private key on the fly.",
-        "password_model_2": "This lets you login to your wallet from anywhere using only your account name and password, but it is vulnerable to brute-force attacks which means it is important to use a very long password!",
+        "password_crucial": "In case you haven't already done so, it is crucial that you take the time to write down your account name and password now, whether it be on paper, a password manager, or somewhere else. If you lose or forget your account name or this password your account will be lost, <strong>we cannot help you get it back</strong>.",
+        "password_lose_warning": "<strong>IMPORTANT: If you forget your account name or pass phrase you will be unable to access your account, we cannot reset or restore your password! Make sure you memorize or write down your account name and password!</strong>",
+        "password_model": "Cloud Wallet",
+        "password_model_1": "The cloud wallet uses a password in combination with your account name to generate your private keys on the fly. It restricts you to only logging in with one account at a time, in return for ease of use and convenience.",
+        "password_model_2": "The cloud wallet lets you login to your wallet from anywhere using only your account name and password, but <strong> your password is vulnerable to brute-force attacks which means it is important to use a very long password, ideally 20+ characters!</strong>",
         "password_model_3": "<li>Single account</li><li>Easy login</li><li>Moderate security</li>",
         "password_show": "Show me my password",
         "paste_private": "Paste private keys here (Wallet Import Format - WIF)",
