--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -566,6 +566,7 @@
         "buy_sell": "Форма ордера",
         "buysell_formatter": "{direction} {asset}",
         "call": "Цена досрочного погашения",
+        "call_limit": "Предел колла",
         "cancel_order_select_all": "Выбрать все ордера",
         "cancel_selected_orders": "Отменить выбранный ордер(а)",
         "change": "Изменить",
@@ -971,7 +972,7 @@
             "asset_issue": "Количество к выпуску",
             "asset_update": "Обновляемый актив",
             "authorizing_account": "Авторизующий аккаунт",
-            "call_limit": "Предел колла %(price)s",
+            "call_limit": "Предел колла, %(price)s",
             "common_options": "Общие параметры",
             "count": "Количество транзакций",
             "date": "Дата",
