--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -566,6 +566,7 @@
         "buy_sell": "Order Form",
         "buysell_formatter": "{direction} {asset}",
         "call": "Call Price",
+        "call_limit": "Call Limit",
         "cancel_order_select_all": "Select all orders",
         "cancel_selected_orders": "Cancel selected order(s)",
         "change": "Change",
@@ -971,7 +972,7 @@
             "asset_issue": "Amount to issue",
             "asset_update": "Asset to update",
             "authorizing_account": "Authorizing account",
-            "call_limit": "Call limit, %(price)s",
+            "call_limit": "Call Limit, %(price)s",
             "common_options": "Common options",
             "count": "Transaction count",
             "date": "Date",
