--- a/app/assets/locales/locale-it.json
+++ b/app/assets/locales/locale-it.json
@@ -566,6 +566,7 @@
         "buy_sell": "Order Form",
         "buysell_formatter": "{direction} {asset}",
         "call": "Call Price",
+        "call_limit": "Limite di Call",
         "cancel_order_select_all": "Select all orders",
         "cancel_selected_orders": "Cancel selected order(s)",
         "change": "Variazione",
