--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -275,6 +275,7 @@
             "approx_fee": "Approximate fee",
             "backing": "Short backing asset",
             "base": "Base asset amount",
+            "corequote": "BTS Asset Amount",
             "base_name": "Base asset",
             "bitasset_opts": "SmartCoin options",
             "cer_warning_1": "Warning",
@@ -327,6 +328,7 @@
             "precision_warning": "Warning: The number of decimals may not be changed after creation",
             "primary": "Primary settings",
             "quote": "Quote asset amount",
+            "issuedbase": "Issued Asset Amount",
             "quote_name": "Quote asset",
             "resolve_prediction": "Resolve prediction",
             "resolve_prediction_text": "The asset prediction can be resolved here.",
