--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2594,7 +2594,12 @@
             "witness_create": "Create witness",
             "witness_update": "Update witness",
             "witness_withdraw_pay": "Witness pay withdrawal",
-            "worker_create": "Create worker"
+            "worker_create": "Create worker",
+            "credit_offer_create": "Create credit offer",
+            "credit_offer_delete": "Delete credit offer",
+            "credit_offer_update": "Update credit offer",
+            "credit_offer_accept": "Accept credit offer",
+            "credit_deal_repay": "Repay credit deal"
         },
         "vesting_balance_create": "created vesting balance of",
         "view_json": "Show raw json",
