add creditoffer page
add credit offer modal

complete creditoffer create action

add my credit offer table

Complete the Loan Administration Checklist

Complete the repayment function

complete credit offer

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -445,7 +445,8 @@
             "white_by": "Whitelisted by",
             "whitelist_authorities": "Whitelist authority",
             "whitelist_market_fee_sharing": "Market fee sharing whitelist"
-        }
+        },
+        "credit_offer": "Loan management"
     },
     "account_browsing_mode": {
         "go_back": "Go back to my account",
@@ -1324,6 +1325,7 @@
         "deposit-withdraw": "Deposit/Withdraw",
         "deposit_legacy": "or Legacy Deposit",
         "exchange": "Exchange",
+        "p2p_lending": "Credit Offer",
         "explorer": "Explore",
         "help": "Help",
         "insight": "Insight",
@@ -2943,5 +2945,59 @@
         "wif_associated_accounts": "Associated Account(s): ",
         "wif_import_error": "Please enter a valid WIF",
         "wif_length_error": "Incorrect input length"
+    },
+    "credit_offer": {
+        "create": "Create credit offer",
+        "edit": "Modify credit offer",
+        "accepted_pawn": "Acceptable",
+        "price": "Price",
+        "operate": "Action",
+        "operate_edit": "Modify",
+        "operate_delete": "Delete",
+        "whitelist_account": "Account",
+        "loan_amount": "Maximum",
+        "add_pawn": "Add collateral",
+        "add_whitelist": "Add white account",
+        "title_add_pawn": "Add collateral",
+        "pawn_amount": "Amount",
+        "tip_pawn_amount": "The amount of collateral required for each unit of assets lent",
+        "title_add_whitelist": "Add white account",
+        "account": "Account",
+        "repay_period": "Repay period",
+        "min_borrow": "Minimum",
+        "fee_rate": "Rate",
+        "tip_fee_rate": "Expressed as a percentage",
+        "validity_period": "Expiration",
+        "plh_select_validity_period": "Choose an expiration date",
+        "list_repay_period": {
+            "period_0": "12 Hours",
+            "period_1": "1 Day",
+            "period_2": "3 Days",
+            "period_3": "7 Days",
+            "period_4": "30 Days",
+            "period_5": "90 days"
+        },
+        "info_borrow_err": "Can't borrow from oneself ！",
+        "asset": "Asset",
+        "total_amount": "Total",
+        "available_amount": "Available",
+        "mortgage_assets": "Collateral",
+        "borrow": "Loan",
+        "borrow_amount": "Amount",
+        "current_balance": "Available",
+        "estimated_fee": "Estimated fee",
+        "plh_input_asset_name": "Please enter asset symbol...",
+        "credit_offers": "Credit offers",
+        "credit_rights": "Credit rights",
+        "credit_debts": "Credit debts",
+        "status": "Status",
+        "active": "Active",
+        "closed": "Closed",
+        "repay": "Repay",
+        "my_debt": "My debt",
+        "debt": "Debt",
+        "redemption_collateral": "Redeem collateral",
+        "credit_right_account": "Account",
+        "credit_debt_account": "Account"
     }
 }
