add tr qrcode in TransactionConfirm

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2606,6 +2606,8 @@
         },
         "vesting_balance_create": "created vesting balance of",
         "view_json": "Show raw json",
+        "view_qrcode": "Show Trx Qrcode",
+        "title_qrcode": "Trx info QRcode",
         "waiting": "Waiting for confirmation..",
         "whitelist_states": {
             "black_listed": "Blacklisted",
