--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2606,8 +2606,9 @@
         },
         "vesting_balance_create": "created vesting balance of",
         "view_json": "Show raw json",
-        "view_qrcode": "Show Trx Qrcode",
-        "title_qrcode": "Trx info QRcode",
+        "view_qrcode": "Show Trx QR code",
+        "view_qr": "Show QR",
+        "title_qrcode": "Transaction QR Code",
         "waiting": "Waiting for confirmation..",
         "whitelist_states": {
             "black_listed": "Blacklisted",
