--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -826,6 +826,7 @@
             "title": "Accounts"
         },
         "asset": {
+            "asset_owner_responsible": "The asset symbol, description as well as its parameters are user defined (by the asset owner)",
             "actions": "Asset actions",
             "collateral": {
                 "bid": "Bid Collateral",
